comecei a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex temporibus quisquam perspiciatis aut beatae veniam obcaecati cupiditate sit accusantium, architecto, ducimus adipisci accusamus quis incidunt consequatur perferendis ratione debitis. Atque?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam itaque vitae quos, veritatis debitis omnis nesciunt! Omnis magni qui, odit, fuga maiores ipsam mollitia assumenda, impedit consectetur iure ab? Dolor!</p>
         </article>
     </main>
 </body>
