--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex temporibus quisquam perspiciatis aut beatae veniam obcaecati cupiditate sit accusantium, architecto, ducimus adipisci accusamus quis incidunt consequatur perferendis ratione debitis. Atque?</p>
+            <p><a href="curso-html.html">Acesse o Curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam itaque vitae quos, veritatis debitis omnis nesciunt! Omnis magni qui, odit, fuga maiores ipsam mollitia assumenda, impedit consectetur iure ab? Dolor!</p>
+            <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
 </body>
